--- a/th.css
+++ b/th.css
@@ -1,12 +1,12 @@
 h1{
-    width: 30%;
-    padding: 20px; 
+    width: 40%;
+    padding: 30px; 
     margin:50px auto;
     margin-top: 20px;
     font-style: italic;
     font-weight: bold;
-    color: blue;
-    background-image: linear-gradient(red,yellow);
+    color: black;
+    background-image: linear-gradient(blue,pink);
     border: solid 30px rgb(0,225,255)
    
 
