--- a/th.css
+++ b/th.css
@@ -6,7 +6,7 @@ h1{
     font-style: italic;
     font-weight: bold;
     color: black;
-    background-image: linear-gradient(blue,pink);
+    background-image: linear-gradient(blue,red);
     border: solid 30px rgb(0,225,255)
    
 
