--- a/th.css
+++ b/th.css
@@ -6,8 +6,8 @@ h1{
     font-style: italic;
     font-weight: bold;
     color: black;
-    background-image: linear-gradient(blue,red);
-    border: solid 30px rgb(0,225,255)
+    background-image: linear-gradient(f5f5f5);
+    border: e74c3c(0,225,255)
    
 
 }
