--- a/th.css
+++ b/th.css
@@ -6,7 +6,7 @@ h1{
     font-style: italic;
     font-weight: bold;
     color: black;
-    background-image: linear-gradient(f5f5f5);
+    background-image: f5f5f5;
     border: e74c3c(0,225,255)
    
 
