--- a/th.css
+++ b/th.css
@@ -5,9 +5,9 @@ h1{
     margin-top: 20px;
     font-style: italic;
     font-weight: bold;
-    color: black;
+    color: 333333;
     background-image: f5f5f5;
-    border: e74c3c(0,225,255)
+    border: 2px solid FF6F61(0,225,255)
    
 
 }
