--- a/th.css
+++ b/th.css
@@ -3,11 +3,11 @@ h1{
     padding: 30px; 
     margin:50px auto;
     margin-top: 20px;
-    font-style: italic;
+    font-style: poppins;
     font-weight: bold;
-    color: 333333;
-    background-image: f5f5f5;
-    border: 2px solid FF6F61(0,225,255)
+    color: black;
+    background-image: linear-gradient(red accent,soft purple);
+    border: solid 20px FF6F61(0,225,255)
    
 
 }
